MeteorPlayer v1.2 is now available. It features:  - Everything from previous version (I take no joy in removing a working headphone jack)  - Fixed bugs which kept application running  - Added a few labels which clarify what is playing right    now and what is next in line  - Tweaked padding and spacing in .css files for value labelHBox

--- a/src/main/resources/light.css
+++ b/src/main/resources/light.css
@@ -74,12 +74,20 @@
 	-fx-spacing: 5;
 	-fx-padding: 10;
 }
-
 .labelHBox {
 	-fx-background-color: #FFFFFF;
-	-fx-padding: 15;
-	-fx-spacing: 250;
-
+	-fx-padding: 7;
+	-fx-spacing: 15;
+}
+.labelVBox {
+    -fx-background-color: #FFFFFF;
+    -fx-padding: 10;
+    -fx-spacing: 7;
+}
+.extraInfoLabel {
+    -fx-background-color: #FFFFFF;
+    -fx-text-fill: #008020;
+    -fx-font-size: 16pt;
 }
 .nowPlayingLabel {
 	-fx-background-color: #FFFFFF;
